test/corpus/statements.txt
================================================================================
Goto statement
================================================================================

goto, skip_section

--------------------------------------------------------------------------------

(source_file
  (goto_statement
    (identifier)))

================================================================================
Label
================================================================================

skip_section:
x = 1

--------------------------------------------------------------------------------

(source_file
  (label
    (identifier))
  (assignment
    (identifier)
    (number_literal)))

================================================================================
Return with value
================================================================================

return, result

--------------------------------------------------------------------------------

(source_file
  (return_statement
    (identifier)))

================================================================================
Return without value
================================================================================

return

--------------------------------------------------------------------------------

(source_file
  (return_statement))

================================================================================
Common block
================================================================================

common shared_data, x, y, z

--------------------------------------------------------------------------------

(source_file
  (common_block
    name: (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Batch include
================================================================================

@utilities

--------------------------------------------------------------------------------

(source_file
  (batch_include
    (identifier)))
